fix: add pre-wrap for price card details (#749)

--- a/src/sub-blocks/PriceCard/PriceCard.scss
+++ b/src/sub-blocks/PriceCard/PriceCard.scss
@@ -80,6 +80,7 @@ $block: '.#{$ns}price-card';
 
         &-details {
             @include text-size(body-2);
+            white-space: pre-wrap;
         }
     }
 
